tests/specs/ecosystem/marvinh_test/fresh/2_0_0_prealpha_0.test
marvinh-test/fresh/2.0.0-prealpha.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.220.1": "jsr:@std/assert@0.220.1",
      "jsr:@std/fs@^0.220.1": "jsr:@std/fs@0.220.1",
      "jsr:@std/path@^0.220.1": "jsr:@std/path@0.220.1",
      "npm:preact@^10.19.6": "npm:preact@10.21.0"
    },
    "jsr": {
      "@std/assert@0.220.1": {
        "integrity": "88710d54f3afdd7a5761e7805abba1f56cd14e4b212feffeb3e73a9f77482425"
      },
      "@std/fs@0.220.1": {
        "integrity": "7fe79c08e9e2ea6818b05f271ddba07eaed7e6dac7ce7cfb35e3f8521aa18fc1",
        "dependencies": [
          "jsr:@std/path@^0.220.1"
        ]
      },
      "@std/path@0.220.1": {
        "integrity": "cc63c1b5e5192e2f718dc2f365a3514fffb26cc0380959bab0f8fb5988a52f0c",
        "dependencies": [
          "jsr:@std/assert@^0.220.1"
        ]
      }
    },
    "npm": {
      "preact@10.21.0": {
        "integrity": "sha512-aQAIxtzWEwH8ou+OovWVSVNlFImL7xUCwJX3YMqA3U8iKCNC34999fFOnWjYNsylgfPgMexpbk7WYOLtKr/mxg==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
export interface ListenOptions extends Partial<Deno.ServeTlsOptions> {
                                                    ~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/app.ts:28:53

error: Type checking failed.

